Added apple preference

--- a/frame.html
+++ b/frame.html
@@ -1,8 +1,55 @@
 <html lang="en-US">
       <head>
+        <meta name="x-apple-disable-message-reformatting">
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
+          @media (prefers-color-scheme: light) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+          }
+          @media (prefers-color-scheme: dark) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+          }
         @media only screen and (max-width: 620px) {
           table[class=body] h1 {
             font-size: 28px !important;
@@ -103,26 +150,26 @@
                           <td style="font-family: sans-serif; font-size: 14px;">
                             <img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646066160/cliqlite-mail-template/Header_mgxgih.jpg" style="width: 100%" />
                             <div style="padding-left: 20px; padding-right: 20px;">
-                            <p style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;">Dear Anu,</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Welcome to CliqLite</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">You can use this code 12345 to verify your account. Kindly note that this code will expire after 5mins.</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Also, please see below for the credentials of your child.</p>
+                            <p class="black-text-color" style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display; color: black;"><strong>Dear Anu,</strong></p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Welcome to CliqLite</p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">You can use this code 12345 to verify your account. Kindly note that this code will expire after 5mins.</p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Also, please see below for the credentials of your child.</p>
                                 <p style="margin-top: 40px;">
-                                  <p style="background: #09AC2C; padding-top: 30px; padding-bottom: 30px; padding-left: 30px; padding-right: 30px; margin-bottom: 40px;">
-                                    <span style="font-weight: bold; color: white; font-family: Plus Jakarta Display;">CliqLite Assigned Email: sample@gmail.com</span>
+                                  <p class="lite-green" style="background: #09AC2C; padding-top: 30px; padding-bottom: 30px; padding-left: 30px; padding-right: 30px; margin-bottom: 40px;">
+                                    <span class="white-text-color" style="font-weight: bold; color: white; font-family: Plus Jakarta Display;"><strong>CliqLite Assigned Email: sample@gmail.com</strong></span>
                                     <br /><br />
-                                    <span style="font-weight: bold; color: white; font-family: Plus Jakarta Display;">Password: 12345678</span>
+                                    <span class="white-text-color" style="font-weight: bold; color: white; font-family: Plus Jakarta Display;"><strong>Password: 12345678</strong></span>
                                   </p>
                                 </p>
                             </p>
-                                <p style="font-size: 16px; font-family: Plus Jakarta Display;">Please note that your account must be verified befoe your child can login with these credentials.</p>
-                                <p style="font-size: 16px; font-family: Plus Jakarta Display;">Thank you for choosing CliqLite as your educational partner</p>
-                                <table style="background: #005C14; width: 100%; border-radius: 5px;">
+                                <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Please note that your account must be verified before your child can login with these credentials.</p>
+                                <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Thank you for choosing CliqLite as your educational partner</p>
+                                <table class="deep-green" style="background: #005C14; width: 100%; border-radius: 5px;">
                                     <tbody>
                                       <tr>
                                         <td style="padding-left: 30px; padding-right: 30px;">
-                                            <p style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
-                                                Get the Cliqlite App!
+                                            <p class="white-text-color" style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
+                                              Get the Cliqlite App!
                                             </p>
                                             <p style="float: right;">
                                                <a href="#">
@@ -140,9 +187,9 @@
                                       </tr>
                                     </tbody>
                                 </table>
-                                <p style="font-family: Plus Jakarta Display;">
-                                    You are receiving this email because you signed up on After7 . If you don’t want to continue receiving these emails you can
-                                    <span style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
+                                <p class="black-text-color" style="font-family: Plus Jakarta Display;">
+                                    You are receiving this email because you signed up on CliqLite. If you don’t want to continue receiving these emails you can
+                                    <span class="lite-green-text-color" style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
                                 </p>
                                 <p style="margin-top: 40px;">
                                       <p style="text-align: center;">
