--- a/frame3.html
+++ b/frame3.html
@@ -1,8 +1,67 @@
 <html lang="en-US">
       <head>
+        <meta name="x-apple-disable-message-reformatting">
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
+          @media (prefers-color-scheme: light) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+            .table-box {
+              background: #E6F7EA !important;
+            }
+          }
+          @media (prefers-color-scheme: dark) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+            .table-box {
+              background: #E6F7EA !important;
+            }
+          }
         @media only screen and (max-width: 620px) {
           table[class=body] h1 {
             font-size: 28px !important;
@@ -113,9 +172,9 @@
                           <td style="font-family: sans-serif; font-size: 14px;">
                             <img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646066315/cliqlite-mail-template/Header3_yczved.jpg" style="width: 100%" />
                             <div style="padding-left: 20px; padding-right: 20px;">
-                            <p style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;">Dear Anu,</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Your (plan type) subscription paymanet was successful and expires on 12/12/22</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Please see below the details of your transaction</p>
+                            <p class="black-text-color" style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;"><strong>Dear Anu,</strong></p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Your (plan type) subscription paymanet was successful and expires on 12/12/22</p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Please see below the details of your transaction</p>
                                 <p style="margin-top: 40px;">
                                   <!-- <p style="background: #09AC2C;">
                                     <img src="/cliqlite/frame.png" style="width: 100%;" />
@@ -127,41 +186,41 @@
                                   </p> -->
                                 </p>
                             </p>
-                            <p style="background: #09AC2C; width: 100%; height: 29px;"></p>
-                            <p style="background: #E6F7EA;" class="table-container">
+                            <p class="lite-green" style="background: #09AC2C; width: 100%; height: 29px;"></p>
+                            <p style="background: #E6F7EA;" class="table-container table-box">
                             <table style="width: 100%; margin-top: -15px; font-family: Plus Jakarta Display;">
                              <tbody>
                               <tr>
-                                  <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Status</td>
-                                  <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">SUCCESSFUL</td>
+                                  <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Status</strong></td>
+                                  <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px;">SUCCESSFUL</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Date and Time</td>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">time</td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Date and Time</strong></td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px;">time</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Child Name</td>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Deborah Lawson</td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Child Name</strong></td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px;">Deborah Lawson</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Channel</td>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Card (or Airtime)</td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Channel</strong></td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px;">Card (or Airtime)</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">Amount</td>
-                                <td style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;">₦00.00</td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Amount</strong></td>
+                                <td class="black-text-color" style="padding-top: 10px; padding-bottom: 10px;">₦00.00</td>
                               </tr>
                              </tbody>
                             </table>
                             </p>
-                            <p style="font-weight: bold; font-size: 18px; font-family: Plus Jakarta Display;">
+                            <p class="black-text-color" style="font-weight: bold; font-size: 18px; font-family: Plus Jakarta Display;">
                                 Thank You for Choosing CliqLite!
                             </p>
-                                <table style="background: #005C14; width: 100%; border-radius: 5px; margin-top: 70px;">
+                                <table class="deep-green" style="background: #005C14; width: 100%; border-radius: 5px; margin-top: 70px;">
                                     <tbody>
                                       <tr>
                                         <td style="padding-left: 30px; padding-right: 30px;">
-                                            <p style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
+                                            <p class="white-text-color" style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
                                                 Get the Cliqlite App!
                                             </p>
                                             <p style="float: right;">
@@ -180,9 +239,9 @@
                                       </tr>
                                     </tbody>
                                 </table>
-                                <p style="font-family: Plus Jakarta Display;">
-                                    You are receiving this email because you signed up on After7 . If you don’t want to continue receiving these emails you can
-                                    <span style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
+                                <p class="black-text-color" style="font-family: Plus Jakarta Display;">
+                                    You are receiving this email because you signed up on CliqLite. If you don’t want to continue receiving these emails you can
+                                    <span class="lite-green-text-color" style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
                                 </p>
                                 <p style="margin-top: 40px; text-align: center;">
                                       <p style="text-align: center;">
