--- a/frame2.html
+++ b/frame2.html
@@ -1,8 +1,69 @@
 <html lang="en-US">
       <head>
+        <meta name="x-apple-disable-message-reformatting">
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
+          @media (prefers-color-scheme: light) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .yellow-btn {
+              background: #F8B800 !important;
+              color: black !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+          }
+          @media (prefers-color-scheme: dark) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .yellow-btn {
+              background: #F8B800 !important;
+              color: black !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+          }
         @media only screen and (max-width: 620px) {
           table[class=body] h1 {
             font-size: 28px !important;
@@ -109,26 +170,26 @@
                           <td style="font-family: sans-serif; font-size: 14px;">
                             <img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646066273/cliqlite-mail-template/Header2_edoijf.jpg" style="width: 100%" />
                             <div style="padding-left: 20px; padding-right: 20px;">
-                            <p style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;">Dear Anu,</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Your account has been successfully created.</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">You can proceed to explore all the Amazing learning resource we have set up for you</p>
+                            <p class="black-text-color" style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;"><strong>Dear Anu,</strong></p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Your account has been successfully created.</p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">You can proceed to explore all the Amazing learning resource we have set up for you</p>
                                 <p style="margin-top: 40px;">
-                                  <p class="group-box" style="background: #09AC2C;">
+                                  <p class="group-box group-box-2" style="background: #09AC2C;">
                                     <img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646066076/cliqlite-mail-template/frame_hanxaj.png" style="width: 100%;" />
                                     <p style="position: relative; text-align: center; bottom: 120px;">
-                                      <span style="color: white; font-weight: bold; font-size: 24px; font-family: Plus Jakarta Display;">Take a quick quiz to get started!</span>
+                                      <span class="white-text-color" style="color: white; font-weight: bold; font-size: 24px; font-family: Plus Jakarta Display;"><strong>Take a quick quiz to get started!</strong></span>
                                       <br />
                                       <button style="background: #F8B800; border: none; border-radius: 15px; width: 164px; height: 47px; font-family: Plus Jakarta Display; font-size: 20px; margin-top: 10px; cursor: pointer;">test</button>
                                     </p>
                                   </p>
                                 </p>
                             </p>
-                                <table style="background: #005C14; width: 100%; border-radius: 5px; margin-top: -50px;">
+                                <table class="deep-green" style="background: #005C14; width: 100%; border-radius: 5px; margin-top: -50px;">
                                     <tbody>
                                       <tr>
                                         <td style="padding-left: 30px; padding-right: 30px;">
-                                            <p style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
-                                                Get the Cliqlite App!
+                                            <p class="white-text-color" style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
+                                              Get the Cliqlite App!
                                             </p>
                                             <p style="float: right;">
                                                 <a href="#">
@@ -146,9 +207,9 @@
                                       </tr>
                                     </tbody>
                                 </table>
-                                <p style="font-family: Plus Jakarta Display;">
-                                    You are receiving this email because you signed up on After7 . If you don’t want to continue receiving these emails you can
-                                    <span style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
+                                <p class="black-text-color" style="font-family: Plus Jakarta Display;">
+                                    You are receiving this email because you signed up on Cliqlite. If you don’t want to continue receiving these emails you can
+                                    <span class="lite-green-text-color" style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
                                 </p>
                                 <p style="margin-top: 40px; text-align: center;">
                                       <p style="text-align: center;">
