--- a/frame7.html
+++ b/frame7.html
@@ -1,8 +1,67 @@
 <html lang="en-US">
       <head>
+        <meta name="x-apple-disable-message-reformatting">
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
+          @media (prefers-color-scheme: light) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+            .table-box {
+              background: #E6F7EA !important;
+            }
+          }
+          @media (prefers-color-scheme: dark) {
+            body {
+              background-color:white !important;
+            }
+            .body {
+              background-color:white !important;
+            }
+            .black-text-color {
+              color: black !important;
+            }
+            .white-text-color {
+              color: white !important;
+            }
+            .lite-green {
+              background: #09AC2C !important;
+            }
+            .deep-green {
+              background: #005C14 !important;
+            }
+            .lite-green-text-color {
+              color: #09AC2C !important;
+            }
+            .group-box-2 {
+              background: #09AC2C !important;
+            }
+            .table-box {
+              background: #E6F7EA !important;
+            }
+          }
         @media only screen and (max-width: 620px) {
           table[class=body] h1 {
             font-size: 28px !important;
@@ -103,23 +162,23 @@
                           <td style="font-family: sans-serif; font-size: 14px;">
                             <img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646066371/cliqlite-mail-template/Header7_z15fct.jpg" style="width: 100%" />
                             <div style="padding-left: 20px; padding-right: 20px;">
-                            <p style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;">Dear Anu,</p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">Let's talk about Data Science</p>
-                            <p style="font-size: 16px; margin-top: 30px; font-family: Plus Jakarta Display;">
+                            <p class="black-text-color" style="font-weight: bold; font-size: 19px; margin-top: 40px; font-family: Plus Jakarta Display;"><strong>Dear Anu,</strong></p>
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">Let's talk about Data Science</p>
+                            <p class="black-text-color" style="font-size: 16px; margin-top: 30px; font-family: Plus Jakarta Display;">
                               Your live class with David starts in an hour
                             </p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">
                               Come watch David share amazing discoveries on Data Science
                             </p>
-                            <p style="font-size: 16px; font-family: Plus Jakarta Display;">
+                            <p class="black-text-color" style="font-size: 16px; font-family: Plus Jakarta Display;">
                                 See you soon!
                               </p>
-                                <table style="background: #005C14; width: 100%; border-radius: 5px; margin-top: 50px;">
+                                <table class="deep-green" style="background: #005C14; width: 100%; border-radius: 5px; margin-top: 50px;">
                                     <tbody>
                                       <tr>
                                         <td style="padding-left: 30px; padding-right: 30px;">
-                                            <p style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
-                                                Get the Cliqlite App!
+                                            <p class="white-text-color" style="float: left; padding-top: 5px; color: white; font-family: Plus Jakarta Display;">
+                                              Get the Cliqlite App!
                                             </p>
                                             <p style="float: right;">
                                                 <a href="#">
@@ -137,9 +196,9 @@
                                       </tr>
                                     </tbody>
                                 </table>
-                                <p style="font-family: Plus Jakarta Display;">
-                                    You are receiving this email because you signed up on After7 . If you don’t want to continue receiving these emails you can
-                                    <span style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
+                                <p class="black-text-color" style="font-family: Plus Jakarta Display;">
+                                    You are receiving this email because you signed up on CliqLite. If you don’t want to continue receiving these emails you can
+                                    <span class="lite-green-text-color" style="color: #09AC2C; text-decoration: underline;">unsubscribe here.</span>
                                 </p>
                                 <p style="margin-top: 40px; text-align: center;">
                                       <p style="text-align: center;">
@@ -162,4 +221,3 @@
         </table>
       </body>
     </html>
-,
